syntax = "proto3";


option go_package = "./;pb";

message SignatureRequest {
    repeated bytes args = 2;
    string signing_key = 4;
}

message BatchSignatureRequest {
    repeated SignatureRequest signature_requests = 1;
}

message SignatureResponse {
    string signature = 1;
    string hash = 2;
}

message BatchSignatureResponse {
    repeated SignatureResponse signature_responses = 1;
}

service SigningService {
    rpc SignTxn(SignatureRequest) returns (SignatureResponse) {}
    rpc BatchSignTxn(BatchSignatureRequest) returns (BatchSignatureResponse) {}
}